# Computational-Logic-TD4-proof-assistant

./: .gitignore
dependent/: dune  prover.ml
report/: report.md
simple/: Makefile  README.md  TODO  dune  expr.ml  get_cwd.ml  lexer.mll  parser.mly  prover.ml  proving.ml
simple/proof/: add.proof  andcomm.proof  contr.proof  curry1.proof  curry2.proof  dist.proof  fst.proof  impdm.proof  nnef.proof  nni.proof  ntf.proof  orcomm.proof  orelim.proof  pred.proof  russel.proof  s.proof  tauto.proof  tintro.proof  tstr.proof
simple/proofs/: curry1.proof  curry2.proof  dist.proof  impdm.proof  injl.proof  injr.proof  nnem.proof  ntf.proof  orcomm.proof  orelim.proof  russel.proof  s.proof  tintro.proof  tstr.proof
