(ocamllex lexer)
(ocamlyacc parser)
(executable
 (name proving)
 (modules proving)
 (libraries prover)
)
(executable
  (name get_cwd)
  (modules get_cwd))

(library
  (name prover)
  (modules prover expr parser lexer)
  (inline_tests)
  (libraries base sexplib sexplib0)
 (preprocess (pps ppx_inline_test ppx_assert ppx_sexp_conv ppx_compare)))
